--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <title>JS constructor</title>
-</head>
-<body>
-<div id="app" class="container-fluid">
-    <div id="panel" class="bg-light sidebar">
-
+  </head>
+  <body>
+    <div id="app" class="container-fluid">
+      <div id="panel" class="bg-light sidebar"></div>
+      <div id="site" class="content"></div>
     </div>
-    <div id="site" class="content">
-        <div class="row">
-            <div class="col-sm">
-                <h1>test title</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias at corporis cupiditate dolor
-                    doloremque fuga incidunt magni minus obcaecati optio pariatur quisquam quos rem sed, sequi unde ut.
-                    Sequi, vitae!</p>
-            </div>
-            <div class="col-sm">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias at corporis cupiditate dolor
-                    doloremque fuga incidunt magni minus obcaecati optio pariatur quisquam quos rem sed, sequi unde ut.
-                    Sequi, vitae!</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-</body>
+  </body>
 </html>
